--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-[MathSkill (1).pptx](https://github.com/OneCOI/OneCOI.github.io/files/13560957/MathSkill.1.pptx)
+<a href="images" download="MathSkill(1).pptx">下载ppt</a>
