--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="images" download="MathSkill(1).pptx">下载ppt</a>
+<a href="images" download="https://github.com/OneCOI/OneCOI.github.io/blob/main/images/MathSkill%20(1).pptx">下载ppt</a>
